Bugfix: Fixed line wrapping of labels/textboxes when positioned out of screen

--- a/share/userfiles/templates/default.css
+++ b/share/userfiles/templates/default.css
@@ -113,6 +113,7 @@ a.linelink {
 	font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
 	font-size: 11px;
 	padding: 2px;
+	white-space:nowrap;
 }
 
 /* labels for the objects on the maps */
@@ -123,6 +124,7 @@ a.linelink {
 	font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
 	font-size: 11px;
 	padding: 2px;
+	white-space:nowrap;
 }
 
 /* control styles */
